# spmetadata

./: CMakeLists.txt  README.md  shairport-sync-metadata
spmetadata.xcodeproj/: project.pbxproj
src/: CommonDefs.hpp  MetaDataMgr.cpp  MetaDataMgr.hpp  dbuf.cpp  dbuf.hpp  main.cpp
